[package]
name = "jwt"
version = "0.1.0"
authors = ["sea <simpleslight@icloud.com>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.44"
ring = "0.16.9"
