[package]
name = "jwts"
version = "0.2.1"
authors = ["sea <simpleslight@icloud.com>"]
license = "Apache-2.0"
edition = "2018"
description = "A rust implementation of JSON Web Tokens."
homepage = "https://github.com/suransea/jwt-rust"
repository = "https://github.com/suransea/jwt-rust"
keywords = ["jwt", "jsonwebtoken"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.44"
ring = "0.16.9"
